Issue 7057: Command line is misaligned

--- a/extension/skin/classic/firebug.css
+++ b/extension/skin/classic/firebug.css
@@ -22,14 +22,15 @@
 /* Command Line */
 
 #fbCommandArrow {
-    margin: 2px 0 2px 7px;
+    margin-left: 7px;
     font-family: monospace;
     color: #0000FF;
+    line-height: 0;
 }
 
 .fbCommandLine {
     -moz-appearance: none;
-    margin: 0 0 2px 4px !important;
+    margin: 0 0 0 4px !important;
     padding: 0;
     border: none;
     font-family: monospace;
@@ -100,6 +101,8 @@
 .fbCommandHtmlBox .background {
     position: relative;
     background: none repeat scroll 0% 0% transparent;
+    line-height: 0;
+    vertical-align: middle;
 }
 
 #fbCommandLineCompletionHolder {
